cabal-version:       >= 1.10

name:                happy-rad
version:             1.21.0
synopsis:            Happy plus an optional recursive ascent-descent backend.

author:              David Knothe
maintainer:          dknothe314@me.com

build-type:          Simple

executable happy-rad
  main-is:             Main.hs
  build-depends:       base >=4.8.2.0,
                       happy-core,
                       happy-frontend,
                       happy-middleend,
                       happy-backend,
                       rad-backend,
                       transformers >= 0.5,
                       mtl >= 2.2.1
  hs-source-dirs:      src
  default-language:    Haskell98
  default-extensions:  CPP, MagicHash, FlexibleContexts
  other-modules:
      Paths_happy_rad

test-suite test
  type: exitcode-stdio-1.0
  main-is: tests.hs
  -- This line is important as it ensures that the local `exe:happy-rad` component declared above is built before the test-suite component is invoked, as well as making sure that `happy` is made available on $PATH and `$happy_datadir` is set accordingly before invoking `tests.hs`
  build-tools: happy-rad

  ghc-options: -threaded
  build-depends: base, happy-test, happy-frontend
  default-language: Haskell98
  other-modules:
        Paths_happy_rad