cabal-version:       >= 1.10

name:                rad-backend
version:             1.21.0
synopsis:            A backend for producing recursive ascent-descent (RAD) code.

author:              David Knothe
maintainer:          dknothe314@me.com

build-type:          Simple

library
  exposed-modules:     RADBackend, RADBackendCLI
  build-depends:       base < 5,
                       array,
                       happy-core == 1.21.0,
                       happy-middleend == 1.21.0,
                       dom-lt >= 0.2.2,
                       containers >= 0.4.2,
                       text
  hs-source-dirs:      src
  default-language:    Haskell98
  default-extensions:  CPP, MagicHash, FlexibleContexts
  other-modules:       Follow,
                       RADTools,
                       RADCodeGen,
                       RADStateGen,
                       Paths_rad_backend